--- a/DialogWizardLib/build.gradle
+++ b/DialogWizardLib/build.gradle
@@ -1,17 +1,15 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.dialogwizardlib"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
     }
 
     buildTypes {
@@ -33,8 +31,6 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation project(path: ':DialogWizardLib')
 }
